--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -25,9 +25,16 @@ jobs:
         java-version: '19'
         distribution: 'temurin'
         cache: maven
+    - name: Set up JDK 17 for Lab2
+      if: steps.filter.outputs.lab2 == 'true'
+      uses: actions/setup-java@v3
+      with:
+        java-version: '19'
+        distribution: 'temurin'
+        cache: maven
 
-    - name: Set up JDK 11 for Lab1 or Lab2
-      if: steps.filter.outputs.lab2 == 'true' || steps.filter.outputs.lab1 == 'true'
+    - name: Set up JDK 11 for Lab1 
+      if: steps.filter.outputs.lab2 == 'true' |
       uses: actions/setup-java@v3
       with:
         java-version: '19'
